--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
-body {
+html, body {
+  width: 100%;
+  height: 100%
+  margin: 0;
+  background-color: #222228;
   text-align: center;
-}
-
-p {
-  font-family: Arial;
+  
 }
